[package]
name = "ogronman-chess-gui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alholmbe-chess = { git = "https://github.com/INDAPlus21/alholmbe-chess.git" }
linked-hash-map = "0.5.4" 
ggez = "0.6.1"
